<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_swap_vert"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_goals"
                android:title="@string/sort_by_goals" />
            <item
                android:id="@+id/action_sort_appearances"
                android:title="@string/sort_by_appearances" />
        </menu>
    </item>

</menu>