<?xml version="1.0" encoding="utf-8"?>
<!--
    Storico (G-4). Il compito: ritrovare una partita. Il valore: squadre, punteggio e data, una scheda
    per partita (ogni partita e' un elemento indipendente: si apre, si invia, si elimina). Il conteggio
    "partite totali" che ripeteva la lista e' tolto. Vuoto: dice cosa manca, perche' e cosa fare.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_history_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/elite_background"
    tools:context=".MatchHistoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/match_history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/space_16"
        android:paddingVertical="@dimen/space_8"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <it.vantaggi.scoreboardessential.ui.EmptyStateView
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:emptyAction="@string/empty_action_back_to_match"
        app:emptyReason="@string/history_empty_reason"
        app:emptyTitle="@string/no_matches_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
